--- a/dispatcher/res/stateBoard.html
+++ b/dispatcher/res/stateBoard.html
@@ -49,7 +49,7 @@
               </img></a>
           </td>
           <td valign="center">
-            <a class="dashed" href="declareGasAttack">Declare a gas attack</a>
+            <a class="dashed" href="declareGasAttack">Declare a sudden gas outburst</a>
           </td>
         </tr>
       </table>
@@ -113,17 +113,17 @@
           </td>
         </tr>
       </table>
-	  <table>
+	  <!--table>
 	  	<tr>
 	  		<td width="70%">Warning, 1 visitor have fallen down!</td>
 			<td><img src="img/fall.svg" class="iconsvg"/></td>
 	  	</tr>
-	  </table>
+	  </table-->
       <div>
         <h2>Employee:</h2>
       </div>
       <table>
-        <tr id="employeePetrov" nodeID="4" style=";display:none;">
+        <tr id="employeePetrov" nodeID="40765258" style=";display:none;">
           <td width="50%" valign="center">
             #112211
           </td>
