--- a/dispatcher/res/html/ius.html
+++ b/dispatcher/res/html/ius.html
@@ -11,88 +11,115 @@
     <link href="../css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       body {
-        padding-top: 20px;
-        padding-bottom: 60px;
+      padding-top: 20px;
+      padding-bottom: 60px;
       }
 
       /* Custom container */
       .container {
-        margin: 0 auto;
-        max-width: 1000px;
+      margin: 0 auto;
+      max-width: 1000px;
       }
       .container > hr {
-        margin: 60px 0;
+      margin: 60px 0;
       }
 
       /* Main marketing message and sign up button */
       .jumbotron {
-        margin: 80px 0;
-        text-align: center;
+      margin: 80px 0;
+      text-align: center;
       }
       .jumbotron h1 {
-        font-size: 50px;
-        line-height: 1;
+      font-size: 50px;
+      line-height: 1;
       }
       .jumbotron .lead {
-        font-size: 24px;
-        line-height: 1.25;
+      font-size: 24px;
+      line-height: 1.25;
       }
       .jumbotron .btn {
-        font-size: 21px;
-        padding: 14px 24px;
+      font-size: 21px;
+      padding: 14px 24px;
       }
 
       /* Supporting marketing content */
       .marketing {
-        margin: 60px 0;
+      margin: 60px 0;
       }
       .marketing p + h4 {
-        margin-top: 28px;
+      margin-top: 28px;
       }
 
 
       /* Customize the navbar links to be fill the entire space of the .navbar */
       .navbar .navbar-inner {
-        padding: 0;
+      padding: 0;
       }
       .navbar .nav {
-        margin: 0;
-        display: table;
-        width: 100%;
+      margin: 0;
+      display: table;
+      width: 100%;
       }
       .navbar .nav li {
-        display: table-cell;
-        width: 1%;
-        float: none;
+      display: table-cell;
+      width: 1%;
+      float: none;
       }
       .navbar .nav li a {
-        font-weight: bold;
-        text-align: center;
-        border-left: 1px solid rgba(255,255,255,.75);
-        border-right: 1px solid rgba(0,0,0,.1);
+      font-weight: bold;
+      text-align: center;
+      border-left: 1px solid rgba(255,255,255,.75);
+      border-right: 1px solid rgba(0,0,0,.1);
       }
       .navbar .nav li:first-child a {
-        border-left: 0;
-        border-radius: 3px 0 0 3px;
+      border-left: 0;
+      border-radius: 3px 0 0 3px;
       }
       .navbar .nav li:last-child a {
-        border-right: 0;
-        border-radius: 0 3px 3px 0;
+      border-right: 0;
+      border-radius: 0 3px 3px 0;
+      } 
+
+      dl {
+      counter-reset: my-counter;
+      width:75%;
+      left: 10%;
+      position:relative;
+      }
+      dt {
+      position: relative;
+      font: bold 16px Georgia;
+      padding: 4px 0 10px 0;
+      }
+      dt:before {
+      color:#999;
+      content: counter(my-counter);
+      counter-increment: my-counter;
+      position: absolute;
+      left: 0;
+      top: 0;
+      font: bold 50px/1 Sans-Serif;
+      }
+      dd {
+      margin: 0 0 20px 0;
+      }	
+      dt, dd {
+      padding-left: 50px;
       }
     </style>
     <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="../assets/js/html5shiv.js"></script>
-    <![endif]-->
+	<script src="../assets/js/html5shiv.js"></script>
+	<![endif]-->
 
     <!-- Fav and touch icons -->
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="../assets/ico/apple-touch-icon-144-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
-      <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
-                    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
-                                   <link rel="shortcut icon" href="../assets/ico/favicon.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="../assets/ico/favicon.png">
   </head>
 
   <body>
@@ -119,53 +146,38 @@
       <div class="jumbotron">
         <h1>Порядок добавления провайдера услуг в ИУС</h1>
       </div>
-      <!-- Example row of columns -->
-      <div class="row-fluid">
-        <div class="span4">
-          <h2>1. Подача заявки</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
-        <div class="span4">
-          <h2>2. Проверка качества</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-       </div>
-        <div class="span4">
-          <h2>3. Передача данных</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
-          <p><a class="btn" href="#">View details &raquo;</a></p>
-        </div>
+      <dl>
+	<dt>Провайдер подает заявку на участие в ИУС</dt>
+	<dd>Провайдерами могут быть магазины, СМИ, информационные издания</dd>
+     	<dt>Оценивается целесообразность</dt>
+	<dd><ul>
+	    <li>Определяется группа пользоваddтелей (по месторасположению, составу домохозяйства, уровню доходов и пр.), для которой предназначается услуга</li>
+	    <li>Проверяется, что новая услуга не будет дублировать уже имеющиеся</li>
+	    <li>Однотипные услуги могут быть интегрированы в одну</li>
+	</ul></dd>
+	<dt>Проводится входной контроль качества</dt>
+	<dd><ul>
+	    <li>Наличие информационной системы, позволяющей обеспечивать актуальность информации (например, информации о ценах и доступности товаров)</li>
+	    <li>Репутация и длительность работы до вступления в ИУС</li>
+	    <li>Наличие системы администрирования услуг</li>
+	    <li>Возможность предоставления одинакого качества услуг для всех потребителей из выбранной группы</li>
+	</ul></dd>
+	<dt>Подписание документов</dt>
+	    <dd><ul>
+		<li>Соглашение о сотрудничестве</li>
+		<li>Соглашение о качестве услуг</li>
+		<li>Соглашение об обработке персональных данных</li>
+	    </ul></dd>
+	    <dt>Провайдер предоставляет данные в специальном формате</dt>
+	    <dd>Актуализация данных проводится по заранее согласованному расписанию</dd>
+	    <dt>После модерации, у всех пользователей добавляется соответствующий пункт в меню услуг</dt>
+	    <dd>Также пользователям приходит сообщение о добавлении новой услуги и информацией о провайдере.</dd>
+	</dl>
       </div>
-
-	<ul>
-	  <li>Провайдер подает заявку на участие в ИУС</li>
-	  Провайдерами могут быть магазины, СМИ, информационные издания.
-	  <li>Оценивается целесообразность </li>
-	  Определяется группа пользователей (по месторасположению, составу домохозяйства, уровню доходов и пр.), для которой предназначается услуга
-	  Проверяется, что новая услуга не будет дублировать уже имеющиеся
-	  Однотипные услуги могут быть интегрированы в одну
-	  <li>Проводится входной контроль качества</li>
-	  Наличие информационной системы, позволяющей обеспечивать актуальность информации (например, информации о ценах и доступности товаров)
-	  Репутация и длительность работы до вступления в ИУС
-	  Наличие системы администрирования услуг
-	  Возможность предоставления одинакого качества услуг для всех потребителей из выбранной группы
-	  <li>Подписание документов</li>
-	  Соглашение о сотрудничестве
-	  Соглашение о качестве услуг
-	  Соглашение об обработке персональных данных
-	  <li>Провайдер предоставляет данные в специальном формате</li>
-	  Актуализация данных проводится по заранее согласованному расписанию
-	  <li>После модерации, у всех пользователей добавляется соответствующий пункт в меню услуг</li>
-	  Также пользователям приходит сообщение о добавлении новой услуги и информацией о провайдере.
-	</ul>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-	<div class="jumbotron">
-        <a class="btn btn-large btn-success" href="#">Демонстрация</a>
-	</div>
       <hr>
-
-
+      <div class="jumbotron">
+        <a class="btn btn-large btn-success" href="#">Демонстрация</a>
+      </div>
       <hr>
 
       <div class="footer">
@@ -175,7 +187,7 @@
     </div> <!-- /container -->
 
     <!-- Le javascript
-    ================================================== -->
+	 ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="../assets/js/jquery.js"></script>
     <script src="../assets/js/bootstrap-transition.js"></script>
