First slide nearly finished

--- a/dispatcher/res/dispatcher.html
+++ b/dispatcher/res/dispatcher.html
@@ -5,13 +5,13 @@
     <title>Monitoring of the emergency system</title>
     <link rel="stylesheet" href="reset.css">
     </style>
-    <script type="text/javascript" src="jquery.js">
+    <script type="text/javascript" src="js/jquery.js">
     </script>
-    <script type="text/javascript" src="jquery.svg.js">
+    <script type="text/javascript" src="js/jquery.svg.js">
     </script>
-    <script type="text/javascript" src="jquery.svgdom.js">
+    <script type="text/javascript" src="js/jquery.svgdom.js">
     </script>
-    <script type="text/javascript" src="jquery.svganim.js">
+    <script type="text/javascript" src="js/jquery.svganim.js">
     </script>
     <script type="text/javascript">
       function scroll(){
