--- a/dispatcher/res/stateBoard.html
+++ b/dispatcher/res/stateBoard.html
@@ -49,7 +49,7 @@
               </img></a>
           </td>
           <td valign="center">
-            <a class="dashed" href="declareGasAttack">Declare a sudden gas outburst</a>
+            <a class="dashed" href="cmd?cmd=gasAttack">Declare a sudden gas outburst</a>
           </td>
         </tr>
       </table>
@@ -132,7 +132,7 @@
           </td>
         </tr>
       </table>
-	  <a class="dashed" href="reset" style="position:absolute; bottom:10px;">Reset</a>
+	  <a class="dashed" href="cmd?cmd=reset" style="position:absolute; bottom:10px;">Reset</a>
     </div>
   </body>
 </html>
