--- a/dispatcher/res/html/ius-entry.html
+++ b/dispatcher/res/html/ius-entry.html
@@ -87,6 +87,7 @@
     <!--script type="text/javascript" src="../js/jquery.svgdom.js"></script-->
     <script type="text/javascript" src="../js/jquery.svganim.js"></script>
 
+    <script src="../js/ius-common.js"></script>
     <script src="../js/ius-entry.js"></script>    
   </body>
 </html>
