--- a/dispatcher/res/html/ius-service.html
+++ b/dispatcher/res/html/ius-service.html
@@ -34,21 +34,60 @@
 	    <div class="jumbotron">
 	      <h1>Порядок предоставления услуг в ИУС</h1>
 	    </div>
-	    <ol class="service-order-list">
-	      <li>Актуальная информация об услугах регулярно передается пользователю по ТВ каналу в фоновом режиме.</li>
-	      <li>Когда пользователь решает воспользоваться услугой, нужные данные извлекаются из памяти приставки.</li>
-	      <li>Сервер хранит всю необходимую информацию о пользователе, поэтому запрос на оказание услуги умещается в одно SMS-сообщение.</li>
-	      <li>Сервер пересылает запрос провайдеру услуги, предварительно зарегистрировав его у себя для последующего админинстрирования услуги.</li>
-	      <li>Все пользовательские запросы шифруются электронной цифровой подписью и могут подтверждаться вводом пин-кода.</li>
-	    </ol>
+	    <div class="accodrion" id="service-order">
+	      <div class="accordion-group">
+		<div class="accordion-heading">
+		  <a class="accordion-toggle" data-toggle="collapse" data-parent="#service-order" href="#collapseOne">
+		    <span class="dashed">Обновление информации об услугах</span>
+		  </a>
+		</div>
+		<div id="collapseOne" class="accordion-body collapse in">
+		  <ul class="accordion-inner">
+		    <li>Данные от поставщиков услуг передаются по расписанию и принимаются приставкой в фоновом режиме.</li>
+		    <li>Для срочных данных предусмотрен оперативный режим доставки.</li>
+		  </ul>		    
+		</div>
+	      </div>
+	      <div class="accordion-group">
+		<div class="accordion-heading">
+		  <a class="accordion-toggle" data-toggle="collapse" data-parent="#service-order" href="#collapseTwo">
+		    <span class="dashed">Заказ услуги</span>
+		  </a>
+		</div>
+		<div id="collapseTwo" class="accordion-body collapse">
+		  <ul class="accordion-inner">
+		    <li>Когда пользователь решает воспользоваться услугой, нужные данные извлекаются из памяти приставки.</li>
+		    <li>Сервер хранит всю необходимую информацию о пользователе, поэтому запрос на оказание услуги умещается в одно SMS-сообщение.</li>
+		    <li>Все пользовательские запросы шифруются электронной цифровой подписью и могут подтверждаться вводом пин-кода.</li>
+		  </ul>
+		</div>
+	      </div>
+	      <div class="accordion-group">
+		<div class="accordion-heading">
+		  <a class="accordion-toggle" href="#">
+		    <span class="dashed">Регистрация заказа</span>
+		    </a>
+		</div>
+	      </div>
+	      <div class="accordion-group">
+		<div class="accordion-heading">
+		  <a class="accordion-toggle" href="#">
+		    Передача заказа поставщику и администрирование услуги
+		  </a>
+		</div>
+	      </div>
+	    </div>
+	    <object data="http://localhost:8089/svg/ius.svg" id="svg" type="image/svg+xml" width="900">
+	    </object>
 	    <div class="jumbotron">
 	      <a class="btn btn-large btn-success" href="#" onclick="demonstration()">Демонстрация</a>
 	    </div>
 	  </div><!--div class="active item"-->
 	  <div class="item">
-	    <iframe style="z-index:2;position:absolute; top:80px; left:-15px;-moz-transform: scale(0.7);" width="950" height="610" src="../../../../../Desktop/bitrix3.html" name="imgbox" id="imgbox">
+	    <iframe style="z-index:2;position:absolute; top:80px; left:-15px;-moz-transform: scale(0.7);" width="950" height="610" src="bitrix3.html" name="imgbox" id="imgbox">
 	    </iframe>
-	    <object style="position:absolute; top:00px;" data="../svg/monitor.svg"  type="image/svg+xml" width="900"></object>
+	    <object style="position:absolute; top:00px;" data="../svg/monitor.svg"  type="image/svg+xml" width="900">
+	    </object>
 	  </div>
 	</div><!--div class="carousel-inner"-->
       </div><!--div class="carousel"-->
@@ -68,6 +107,7 @@
     <!--script type="text/javascript" src="../js/jquery.svgdom.js"></script-->
     <script type="text/javascript" src="../js/jquery.svganim.js"></script>
 
-    <script src="../js/ius-entry.js"></script>    
+    <script src="../js/ius-common.js"></script>
+    <script src="../js/ius-service.js"></script>    
   </body>
 </html>
