Make bitrix look tidy

--- a/dispatcher/res/html/ius-service.html
+++ b/dispatcher/res/html/ius-service.html
@@ -82,9 +82,9 @@
           </div><!--div class="active item"-->
           <div class="item">
 	    <div id="monitor-object">
-            <object data="../svg/monitor.svg"  type="image/svg+xml" width="900">
+              <object data="../svg/monitor.svg"  type="image/svg+xml" width="700">
             </object>
-	    <iframe width="1100" height="610" src="bitrix3.html" name="imgbox" id="imgbox">
+	    <iframe id="bitrix" width="888" height="577" src="bitrix/index.html" name="imgbox" id="imgbox">
             </iframe>
           </div>
         </div><!--div class="carousel-inner"-->
