Add shop order handling

--- a/dispatcher/res/html/ius-entry.html
+++ b/dispatcher/res/html/ius-entry.html
@@ -62,11 +62,11 @@
 	      <dd>Также пользователям приходит сообщение о добавлении новой услуги и информацией о провайдере.</dd>
 	    </dl>	    	  
 	    <div class="jumbotron">
-	      <a class="btn btn-large btn-success" href="#" onclick="demonstration()">Демонстрация</a>
+	      <a id="demontration-btn" class="btn btn-large btn-success" href="#">Демонстрация</a>
 	    </div>
 	  </div><!--div class="active item"-->
 	  <div class="item">
-	    <object data="http://localhost:8089/svg/ius.svg" id="svg" type="image/svg+xml" width="900">
+	    <object data="http://localhost:8089/svg/ius.svg" id="svg" type="image/svg+xml">
 	    </object>
 	  </div>
 	</div><!--div class="carousel-inner"-->
