Add complaint processing

--- a/dispatcher/res/html/bitrix/index.html
+++ b/dispatcher/res/html/bitrix/index.html
@@ -316,7 +316,7 @@
 	<td class="adm-list-table-cell"><span id="MARKED_5" style="">Нет</span></td>
 	<td class="adm-list-table-cell"><span id="payed_5">Нет</span></td>
 	<td class="adm-list-table-cell"><span id="allow_deliv_5">Нет</span></td>
-	<td class="adm-list-table-cell"><span id="cancel_5">Да</span></td>
+	<td class="adm-list-table-cell"><span id="cancel_5">Нет</span></td>
 	<td class="adm-list-table-cell"><span id="DEDUCTED_5">Нет</span></td>
 	<td class="adm-list-table-cell adm-list-table-cell-last"><span id="status_order_5">Принят, ожидается оплата</span></td>
       </tr>
@@ -327,7 +327,7 @@
 	<td class="adm-list-table-cell"><table><tbody><tr><td valign="top"></td>
 		<td><b><a href="http://1876.bitrixlabs.ru/bitrix/admin/sale_order_detail.php?ID=4&amp;filter=Y&amp;set_filter=Y&amp;lang=ru" title="Посмотреть подробную информацию о заказе">№&nbsp;7784</a></b></td></tr></tbody></table></td>
 	<td class="adm-list-table-cell">[<a href="http://1876.bitrixlabs.ru/bitrix/admin/user_edit.php?ID=1&amp;lang=ru">5456882</a>] <a href="http://1876.bitrixlabs.ru/bitrix/admin/sale_buyers_profile.php?USER_ID=1&amp;lang=ru">Курносов Александр Сергеевич</a></td>
-	<td class="adm-list-table-cell">[45] <a href="http://1876.bitrixlabs.ru/catalog/illuminating/black/">Сельдь Исландка</a> <nobr>(2.00 шт.)</nobr></td>
+	<td class="adm-list-table-cell">[10] <a href="http://1876.bitrixlabs.ru/catalog/illuminating/black/">Сельдь Исландка</a> <nobr>(2.00 шт.)</nobr></td>
 	<td class="adm-list-table-cell">78 руб.</td>
 	<td class="adm-list-table-cell"><span id="payed_4">Нет</span></td>
 	<td class="adm-list-table-cell"><span id="allow_deliv_4">Нет</span></td>
@@ -343,7 +343,7 @@
 	<td class="adm-list-table-cell"><table><tbody><tr><td valign="top"></td>
 		<td><b><a href="http://1876.bitrixlabs.ru/bitrix/admin/sale_order_detail.php?ID=3&amp;filter=Y&amp;set_filter=Y&amp;lang=ru" title="Посмотреть подробную информацию о заказе">№&nbsp;7783</a></b></td></tr></tbody></table></td>
 	<td class="adm-list-table-cell">[<a href="http://1876.bitrixlabs.ru/bitrix/admin/user_edit.php?ID=1&amp;lang=ru">5493072</a>] <a href="http://1876.bitrixlabs.ru/bitrix/admin/sale_buyers_profile.php?USER_ID=1&amp;lang=ru">Русаков Ростислав Игоревич</a></td>
-	<td class="adm-list-table-cell">[39] <a href="http://1876.bitrixlabs.ru/catalog/illuminating/black/">Молоко Лианоз. 3,2%</a> <nobr>(6.00 шт.)</nobr><hr size="1" width="90%">[54] <a href="http://1876.bitrixlabs.ru/catalog/home/orion/">Йогурт Активиа 2,8%</a> <nobr>(1.00 шт.)</nobr></td>
+	<td class="adm-list-table-cell">[11] <a href="http://1876.bitrixlabs.ru/catalog/illuminating/black/">Молоко Лианоз. 3,2%</a> <nobr>(6.00 шт.)</nobr><hr size="1" width="90%">[12] <a href="http://1876.bitrixlabs.ru/catalog/home/orion/">Йогурт Активиа 2,8%</a> <nobr>(1.00 шт.)</nobr></td>
 	<td class="adm-list-table-cell">221 руб.</td>
 	<td class="adm-list-table-cell"><span id="payed_3">Да</span></td>
 	<td class="adm-list-table-cell"><span id="allow_deliv_3">Нет</span></td>
@@ -360,7 +360,7 @@
 		<td><b><a href="http://1876.bitrixlabs.ru/bitrix/admin/sale_order_detail.php?ID=2&amp;filter=Y&amp;set_filter=Y&amp;lang=ru" title="Посмотреть подробную информацию о заказе">№&nbsp;7782</a></b></td></tr></tbody></table></td>
 	<td class="adm-list-table-cell">[<a href="http://1876.bitrixlabs.ru/bitrix/admin/user_edit.php?ID=1&amp;lang=ru">4568315</a>] <a href="http://1876.bitrixlabs.ru/bitrix/admin/sale_buyers_profile.php?USER_ID=1&amp;lang=ru">Кочнев Денис Александрович
 </a></td>
-	<td class="adm-list-table-cell">[19] <a href="http://1876.bitrixlabs.ru/catalog/textile/towel_1/">Хлеб Дарниц.</a> <nobr>(1.00 шт.)</nobr></td>
+	<td class="adm-list-table-cell">[13] <a href="http://1876.bitrixlabs.ru/catalog/textile/towel_1/">Хлеб Дарниц.</a> <nobr>(1.00 шт.)</nobr></td>
 	<td class="adm-list-table-cell">22 руб.</td>
 	<td class="adm-list-table-cell"><span id="payed_2">Да</span></td>
 	<td class="adm-list-table-cell"><span id="allow_deliv_2">Да</span></td>
@@ -377,7 +377,7 @@
 		<td><b><a href="http://1876.bitrixlabs.ru/bitrix/admin/sale_order_detail.php?ID=1&amp;filter=Y&amp;set_filter=Y&amp;lang=ru" title="Посмотреть подробную информацию о заказе">№&nbsp;7781</a></b></td></tr></tbody></table></td>
 	<td class="adm-list-table-cell">[<a href="http://1876.bitrixlabs.ru/bitrix/admin/user_edit.php?ID=1&amp;lang=ru">4578295</a>] <a href="http://1876.bitrixlabs.ru/bitrix/admin/sale_buyers_profile.php?USER_ID=1&amp;lang=ru">Левина Юлия Алексеевна
 </a></td>
-	<td class="adm-list-table-cell">[89] <a href="http://1876.bitrixlabs.ru/catalog/illuminating/black/">Чай Ахмад</a> <nobr>(2.00 шт.)</nobr><hr size="1" width="90%">[32] <a href="http://1876.bitrixlabs.ru/catalog/home/orion/">Горошек Зелен. Великан</a> <nobr>(1.00 шт.)</nobr></td>
+	<td class="adm-list-table-cell">[15] <a href="http://1876.bitrixlabs.ru/catalog/illuminating/black/">Чай Ахмад</a> <nobr>(2.00 шт.)</nobr><hr size="1" width="90%">[17] <a href="http://1876.bitrixlabs.ru/catalog/home/orion/">Горошек Зелен. Великан</a> <nobr>(1.00 шт.)</nobr></td>
 	<td class="adm-list-table-cell">136 руб.</td>
 	<td class="adm-list-table-cell"><span id="payed_1">Да</span></td>
 	<td class="adm-list-table-cell"><span id="allow_deliv_1">Да</span></td>
