--- a/dispatcher/res/html/ius-entry.html
+++ b/dispatcher/res/html/ius-entry.html
@@ -88,6 +88,7 @@
     <script type="text/javascript" src="../js/jquery.svganim.js"></script>
 
     <script src="../js/ius-common.js"></script>
+    <script src="../js/ius-svg.js"></script>
     <script src="../js/ius-entry.js"></script>    
   </body>
 </html>
