--- a/dispatcher/res/html/ius-mgmt.html
+++ b/dispatcher/res/html/ius-mgmt.html
@@ -20,18 +20,54 @@
           <div class="container">
             <ul class="nav">
               <li><a href="ius-entry.html">Вход в ИУС</a></li>
-              <li class="active"><a href="ius-service.html">Оказание услуг</a></li>
-              <li><a href="ius-mgmt.html">Администрирование услуг</a></li>
+              <li><a href="ius-service.html">Оказание услуг</a></li>
+              <li  class="active"><a href="ius-mgmt.html">Администрирование услуг</a></li>
               <li><a href="ius-evi.html">Передача ЭВИ</a></li>
             </ul>
           </div>
         </div>
       </div><!-- /.navbar -->
 
-      <div class="jumbotron">
-        <h1>Доверенная зона в ИУС</h1>
-      </div>
-      <object data="http://localhost:8089/svg/mgmt.svg" id="svg" type="image/svg+xml" width="900"></object>
+      <div class="carousel slide">
+        <div class="carousel-inner">
+          <div class="active item">
+            <div class="jumbotron">
+              <h1>Доверенная зона в ИУС</h1>
+            </div>
+            <object data="http://localhost:8089/svg/mgmt.svg" id="svg" type="image/svg+xml"></object>
+            <div class="jumbotron">
+              <a id="demontration-btn" class="btn btn-large btn-success" href="#">Демонстрация</a>
+            </div>
+          </div><!--div class="active item"-->
+          <div class="item">
+	    	    <div id="monitor-object">
+              <object data="../svg/monitor.svg"  type="image/svg+xml">
+            </object>
+	    <iframe id="bitrix" src="bitrix2/index.html" name="imgbox" id="imgbox">
+            </iframe>
+          </div>
+          </div>
+        </div><!--div class="carousel-inner"-->
+      </div><!--div class="carousel"-->
+      <hr>
+      <footer class="muted">
+        <p>&copy; ФГУП НИИР, 2013</p>
+      </footer>
     </div>
+
+    <!-- Le javascript
+         ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="../js/jquery.js"></script>
+    <script src="../js/bootstrap.js"></script>
+    <script type="text/javascript" src="../js/jquery.svg.js"></script>
+    <!--script type="text/javascript" src="../js/jquery.svgfilter.js"></script-->
+    <!--script type="text/javascript" src="../js/jquery.svgdom.js"></script-->
+    <script type="text/javascript" src="../js/jquery.svganim.js"></script>
+
+    <script src="../js/ius-common.js"></script>
+    <script src="../js/ius-mgmt.js"></script>
+    <script src="../js/ius-service.js"></script>
+
   </body>
 </html>
