Emergency dispatcher system staged

--- a/dispatcher/res/html/bitrix3/index.html
+++ b/dispatcher/res/html/bitrix3/index.html
@@ -264,7 +264,7 @@
 
 <div id="tbl_sale_order_result_div" class="adm-list-table-layout"><div class="adm-list-table-wrap">
 <div class="adm-list-table-top">
-	<a href="http://1435.bitrixlabs.ru/bitrix/admin/sale_order_new.php?lang=ru&amp;LID=s1" class="adm-btn adm-btn-save adm-btn-add" title="Блокировка сервиса магазин" id="btn_new">Заблокировать магазин</a>
+	<a id="shop-block" href="#" class="adm-btn adm-btn-save adm-btn-add" title="Блокировка сервиса магазин" id="btn_new">Заблокировать магазин</a>
 
 	<div class="adm-small-button adm-table-setting" title="Настроить внешний вид списка" onclick="this.blur();BX.adminList.ShowMenu(this, [{'GLOBAL_ICON':'adm-menu-setting','TEXT':'Настроить','TITLE':'Настроить внешний вид списка','ONCLICK':'tbl_sale_order.ShowSettings(\'/bitrix/admin/sale_order.php?mode=settings&amp;lang=ru\')'},
 {'GLOBAL_ICON':'adm-menu-excel','TEXT':'Excel','TITLE':'Выгрузить данные из списка в Excel','ONCLICK':'location.href=\'/bitrix/admin/sale_order.php?mode=excel&amp;lang=ru\''}]); return false;"></div>
