--- a/dispatcher/res/html/dispatcher.html
+++ b/dispatcher/res/html/dispatcher.html
@@ -29,14 +29,32 @@
         </div>
       </div><!-- /.navbar -->
       <div class="row">
-        <div class="span4">
+        <div id="control" class="span4">
           <h2><a href="" class="dashed">Внешняя тревога</a></h2>
         </div>
         <div class="span8">
-          <object data="http://localhost:8089/svg/plan.svg" id="dispatcher" type="image/svg+xml">
+          <object data="http://localhost:8089/svg/plan.svg" id="plan" type="image/svg+xml">
           </object>
         </div>
       </div>
     </div>
+          <hr>
+      <footer class="muted">	       
+	<p>&copy; ФГУП НИИР, 2013</p>
+      </footer>
+    </div>
+
+    <!-- Le javascript
+	 ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="../js/jquery.js"></script>
+    <script src="../js/bootstrap.js"></script>
+    <script type="text/javascript" src="../js/jquery.svg.js"></script>
+    <!--script type="text/javascript" src="../js/jquery.svgfilter.js"></script-->
+    <!--script type="text/javascript" src="../js/jquery.svgdom.js"></script-->
+    <script type="text/javascript" src="../js/jquery.svganim.js"></script>
+
+    <script src="../js/ius-common.js"></script>
+    <script src="../js/dispatcher.js"></script>    
   </body>
 </html>
